--- a/css/main-1.6.css
+++ b/css/main-1.6.css
@@ -182,6 +182,10 @@ body {
     font-size: 1em;
 }
 
+#play {
+    margin-bottom: 100px;
+}
+
 /* ==============
     MOBILE: Menu
    ============== */
@@ -805,6 +809,8 @@ section h2 {
 .responsive-image.proposal {
     text-align: center;
     margin: 60px auto 60px auto;
+    width="100%";
+
 }
 .responsive-image.proposal img {
     border: 10px solid #090909;
@@ -814,6 +820,19 @@ section h2 {
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
     border-radius: 8px;
+    width="100%";
+
+}
+
+.proposal2 {
+    border: 10px solid #090909;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+    width: 100%;
+
 }
 
 img.theinn  {
